--- a/react/public/index.html
+++ b/react/public/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link
             rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700|Poppins:100,200,300,400,500,600,700,800,900&display=swap"
+            href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Poppins:100,200,300,400,500,600,700,800,900&display=swap"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
